# IDATT2505-Sikkerhet-kryptografi

oblig3/: Dockerfile  flag.txt  package-lock.json  package.json  readme.md
oblig3/backend/: server.js
oblig3/static/: index.html  main.js
oblig4/: svar.txt
oblig4/oppg2/: main.c  main.cpp  main.rs  main_c  main_cpp  main_rs
oblig5/: CMakeLists.txt  Makefile  main.c  readme.md  utility.h
oblig5/tests/: utility_fuzzer_test.c  utility_test.c
oblig6/oblig6_task/: main.cpp
oblig6/oblig6_task/oppg1/: CMakeLists.txt  main.cpp  svar.txt
oblig7/: oppg-text.txt  oppg2.py  oppg3.py  oppg4.py  oppg5.py
oblig8/: oppg2.py  oppg3.py  oppg4.py
oblig9/: oppg1.py  oppg2.py  oppg3.py  oppg4.py  oppg5.py  oppg6.txt  test.py  test2.py
oblig_10/: oppg1.py  oppg2.py  oppg3.py  oppg4.py  oppg5.py
